🛠️ Repair buttons on small-width devices

--- a/style/style.css
+++ b/style/style.css
@@ -238,7 +238,7 @@ iframe[seamless] {
   font-size: 62px;
 }
 .text-box p {
-  margin: 10px auto 30px;
+  margin: 10px auto 15px;
   font-size: 18px;
 }
 .text-box img {
@@ -258,6 +258,7 @@ iframe[seamless] {
   transition: 0.5s;
   margin-right: 10px;
   margin-left: 10px;
+  margin-top: 15px;
 }
 .organ-btn:hover {
   border: 3px solid #f44336;
@@ -270,7 +271,7 @@ iframe[seamless] {
   }
   .text-box p {
     font-size: 15px;
-    margin: 2px auto 30px;
+    margin: 2px auto 15px;
   }
   .text-box img {
     height: 20vh;
